# treio

./: Cargo.toml  README.md
src/: constants.rs  lib.rs  main.rs  traits.rs
src/app/: mod.rs  render.rs  sdl.rs  update.rs
src/grid/: mod.rs
src/grid/segment/: air.rs  block.rs  cell.rs  genome.rs  mod.rs
src/world/: mod.rs
